# spade

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  audio.h  base_engine.c  engine.js  jsdev.sh  module_native.c  native_magic_strings.h  piano.c  piano.h  script.h
pc/jerry/: refresh.sh
rpi/: CMakeLists.txt  audio.c  button_test.hpp  hello_world.hpp  main.c  main.cpp  no_cart.hpp  spade_backends.cpp  spade_backends.hpp  upload.h  zelda_pico_cart.hpp
tools/: copy-firmware-on-connect.sh  listen.sh
